# thunk

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  config.toml  justfile
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMMANDS.md  MEMORY.md  SETUP.md  architecture.md  benchmarks.md  roadmap.md  runtime.md  sessions.md  setup.md  tools.md
docs/benchmarks/: README.md
scripts/: check.sh  setup.sh
skills/benchmark-evaluator/: SKILL.md
skills/repo-navigation/: SKILL.md
src/: commands.rs  config.rs  debug_log.rs  dirs.rs  error.rs  events.rs  hooks.rs  lib.rs  main.rs  safety.rs  skills.rs
src/app/: cli.rs  config.rs  context.rs  error.rs  mod.rs  paths.rs  session.rs
src/cache/: exact.rs  mod.rs
src/config/: defaults_impl.rs  files.rs  profile.rs
src/inference/: approval.rs  backend.rs  budget.rs  cache.rs  indexing.rs  investigation.rs  llama_cpp.rs  mod.rs  ollama.rs  openai_compat.rs  reflection.rs  runtime.rs  session.rs  tool_loop.rs
src/llm/: backend.rs  mod.rs
src/logging/: mod.rs
src/memory/: compression.rs  facts.rs  index.rs  mod.rs  retrieval.rs
src/runtime/: anchors.rs  conversation.rs  engine.rs  generation.rs  investigation.rs  mod.rs  paths.rs  project_path.rs  project_root.rs  project_snapshot.rs  prompt.rs  prompt_analysis.rs  resolved_input.rs  resolver.rs  response_text.rs  scenarios.rs  search_query.rs  tool_codec.rs  tool_parser.rs  tool_round.rs  tool_surface.rs  trace.rs  types.rs
src/safety/: network.rs  paths.rs  policy.rs  shell.rs  types.rs
src/session/: mod.rs
(+147 files in other folders)
