[package]
name = "params-cli"
version = "0.6.3"
edition = "2021"

[dependencies]
llama-cpp-2 = { version = "0.1", features = ["metal"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
toml = { version = "0.8", features = ["preserve_order"] }
ureq = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
sha2 = "0.10"
unicode-width = "0.2"
