[package]
name = "thunk"
version = "0.8.24"
edition = "2021"

[dependencies]
crossterm = "0.28"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
llama-cpp-2 = "=0.1.143"
llama-cpp-sys-2 = "=0.1.143"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
ureq = { version = "2", features = ["tls"] }

[dev-dependencies]
tempfile = "3"
